--- a/collections/catalog/products/custom-home-kit-soccer.html
+++ b/collections/catalog/products/custom-home-kit-soccer.html
@@ -85,10 +85,10 @@
     <!-- Connect css ends -->
 
     <title>
-      Buy Custom Soccer Kit Online USA | Order Custom Football Kits | LEXA Sport
+      Custom Soccer Kit
     </title>
 
-    <meta property="og:site_name" content="LEXASPORT" />
+    <meta property="og:site_name" content="" />
     <meta
       property="og:url"
       content="https://lexasport.com/products/custom-home-kit-soccer"
@@ -247,22 +247,22 @@
     <link
       rel="alternate"
       hreflang="x-default"
-      href="https://lexasport.com/products/custom-home-kit-soccer"
+      href=""
     />
     <link
       rel="alternate"
       hreflang="en-MX"
-      href="https://lexasport.com/en-mx/products/custom-home-kit-soccer"
+      href=""
     />
     <link
       rel="alternate"
       hreflang="es-MX"
-      href="https://lexasport.com/es-mx/products/custom-home-kit-soccer"
+      href=""
     />
     <link
       rel="alternate"
       hreflang="en-IN"
-      href="https://lexasport.com/en-in/products/custom-home-kit-soccer"
+      href=""
     />
     <link
       rel="alternate"
@@ -272,7 +272,7 @@
     <link
       rel="alternate"
       hreflang="es-US"
-      href="https://lexasport.com/es/products/custom-home-kit-soccer"
+      href="#/custom-home-kit-soccer"
     />
     <link
       rel="alternate"
